Add additional venues